--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,7 @@ $bytesize_icons_desired:
 $accent-purple: #4e3671;
 $accent-purple-bright: #734fa6;
 $accent-purple-bright2: #a86aff;
+$accent-purple-bright-super: #c0baf2;
 
 // Stylesheets for each subpage area.
 @import "index";
